# fastx-barber

./: .deepsource.toml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  pythonpackage.yml
docs/: _config.yml  index.md  usage.md
fastx_barber/: __init__.py  bedio.py  const.py  exception.py  extract.py  flag.py  io.py  match.py  qual.py  random.py  scriptio.py  seqio.py  trim.py
fastx_barber/scripts/: __init__.py  arguments.py  barber.py  common.py  extract.py  filter.py  find_seq.py  flag.py  flag_extract.py  flag_filter.py  flag_regex.py  flag_split.py  flag_stats.py  match.py  trim.py  trim_len.py  trim_qual.py  trim_regex.py
fastx_barber/scripts/common/: __init__.py  argparse.py  arguments.py  flag.py  io.py  qual.py
fastx_barber/tests/: test_bedio.py  test_flag.py  test_io.py  test_match.py  test_qual.py  test_random.py  test_seqio.py  test_trim.py
fbarber/: __init__.py  const.py  extract.py  io.py  match.py  seqio.py  trim.py
fbarber/scripts/: __init__.py  barber.py  common.py  extract.py  match.py  trim.py
